--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3300",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -18,7 +18,7 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "lucide-react": "0.105.0-alpha.4",
-    "next": "^13.4.4",
+    "next": "^13.4.8",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,6 +40,7 @@
     "eslint-plugin-tailwindcss": "^3.12.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "prisma": "^4.16.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   }
