--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.5.1",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "lucide-react": "0.105.0-alpha.4",
+    "monaco-editor": "^0.39.0",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
