--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.12.0",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prisma": "^4.16.2",
