--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.5.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "lucide-react": "0.105.0-alpha.4",
+    "lucide-react": "^0.105.0-alpha.4",
     "monaco-editor": "^0.39.0",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
@@ -40,9 +42,9 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.12.0",
-    "prettier-plugin-tailwindcss": "^0.1.13",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.16.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
