--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "next-template",
+  "name": "axilla-demo",
+  "browser": {
+    "fs": false
+  },
   "version": "0.0.2",
   "private": true,
   "scripts": {
@@ -23,8 +26,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
+    "axgen": "file:../axgen",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "dotenv": "^16.3.1",
     "lucide-react": "^0.105.0-alpha.4",
     "monaco-editor": "^0.39.0",
     "next": "^13.4.8",
