--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
-    "axgen": "file:../axgen",
+    "axgen": "0.0.1-beta.6",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "dotenv": "^16.3.1",
