Add eslint parsing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,14 +3,16 @@
   "root": true,
   "extends": [
     "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended",
     "prettier",
     "plugin:tailwindcss/recommended"
   ],
-  "plugins": ["tailwindcss"],
+  "plugins": ["tailwindcss", "@typescript-eslint"],
   "rules": {
     "@next/next/no-html-link-for-pages": "off",
     "react/jsx-key": "off",
-    "tailwindcss/no-custom-classname": "off"
+    "tailwindcss/no-custom-classname": "off",
+    "@typescript-eslint/ban-ts-comment": "off"
   },
   "settings": {
     "tailwindcss": {
