--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-arrow": "^1.0.3",
     "axgen": "0.0.1-beta.6",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
