Update demo with newer axgen + pgvector

--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,5 @@ PINECONE_INDEX_DIMENSION=1536
 # Pinecone namespace, "default" by default.
 PINECONE_NAMESPACE=default
 
+## OpenAI settings
 OPENAI_API_KEY=sk-fake
-
-## Chroma settings
-
-CHROMA_COLLECTION=vectors
-CHROMA_PATH=http://localhost:8000
