--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
-    "axgen": "0.0.1-beta.9",
+    "axgen": "^0.0.19",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "dotenv": "^16.3.1",
